<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="PasswordGenerateBinding">

        <variable
            name="viewModel"
            type="com.beibeilab.accountprotector.viewmodel.PasswordGenerateViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.beibeilab.accountprotector.PasswordGenerateFragment">

        <CheckedTextView
            android:id="@+id/checkedTextView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:onClick="@{viewModel::checkedTextViewClickListener}"
            android:text="@string/generate_uppercase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_generate_title" />

        <CheckedTextView
            android:id="@+id/checkedTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:onClick="@{viewModel::checkedTextViewClickListener}"
            android:text="@string/generate_lowercase"
            app:layout_constraintEnd_toEndOf="@+id/checkedTextView"
            app:layout_constraintStart_toStartOf="@+id/checkedTextView"
            app:layout_constraintTop_toBottomOf="@+id/checkedTextView" />

        <CheckedTextView
            android:id="@+id/checkedTextView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:onClick="@{viewModel::checkedTextViewClickListener}"
            android:text="@string/generate_number"
            app:layout_constraintEnd_toEndOf="@+id/checkedTextView2"
            app:layout_constraintStart_toStartOf="@+id/checkedTextView2"
            app:layout_constraintTop_toBottomOf="@+id/checkedTextView2" />

        <CheckedTextView
            android:id="@+id/checkedTextView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:onClick="@{viewModel::checkedTextViewClickListener}"
            android:text="@string/generate_other"
            app:layout_constraintEnd_toEndOf="@+id/checkedTextView3"
            app:layout_constraintStart_toStartOf="@+id/checkedTextView3"
            app:layout_constraintTop_toBottomOf="@+id/checkedTextView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="Length"
            app:layout_constraintStart_toStartOf="@+id/checkedTextView4"
            app:layout_constraintTop_toBottomOf="@+id/checkedTextView4" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/checkedTextView4"
            android:layout_marginEnd="0dp" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/generate"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/checkedTextView4"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/text_generate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/generate_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/checkedTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>